--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ input {
     height: 46%;
     border: 0;
     padding-left: 10px;
+    text-decoration: none;
+    outline-width: 0;
 }
 
 .title {
@@ -27,13 +29,13 @@ input {
 
 .addButton {
     width: 10%;
-    height: 48%;
+    height: 50%;
     border: 0;
 }
 
 .clrButton {
     width: 10%;
-    height: 48%;
+    height: 50%;
     border: 0;
 }
 
@@ -42,12 +44,15 @@ input {
     width: 100%;
 }
 
+span {
+    margin-left: 50px;
+}
+
 .item {
     width: 100%;
     height: 5%;
     display: flex;
     align-items: center;
-    padding-left: 50px;
 }
 
 .item:nth-child(odd) {
